load/deployment.example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load
  labels:
    app: load
spec:
  replicas: 50
  selector:
    matchLabels:
      app: load
  template:
    metadata:
      labels:
        app: load
    spec:
      containers:
      - name: load
        image: gcr.io/[YourProjectID]/load:latest
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /healthz
            port: 8080
        ports:
        - containerPort: 8080
