load/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gkeloadip"
spec:
  backend:
    serviceName: load
    servicePort: 8080
